fix: Text improvements.

--- a/src/pages/services-gym.astro
+++ b/src/pages/services-gym.astro
@@ -26,8 +26,9 @@ const description =
                     <P style="md:flex-[2] text-center">
                         Salut! Sunt <strong>Ștefan Rusu</strong>, kinetoterapeut
                         și antrenor personal. Te pot ajuta să îți îmbunătățești
-                        sănătătea și forma fizică atât în <a href="#cluj-napoca"
-                            ><strong>Cluj-Napoca</strong></a
+                        sănătătea, forma fizică, să învingi orice afecțiune
+                        ortopedică și să-ți dezvolți musculatura, atât în <a
+                            href="#cluj-napoca"><strong>Cluj-Napoca</strong></a
                         >, cât și în <a href="#huedin"
                             ><strong>Huedin (Cluj)</strong></a
                         >
@@ -61,8 +62,9 @@ const description =
                 <Span>
                     În funcție de scopul pe care vrei să îl atingi la sală, vei
                     primi un plan de kinetoterapie adaptat nevoilor tale, care
-                    include exerciții și antrenamente eficiente, ghidate pas cu
-                    pas, pentru a stimula recuperarea și a preveni recidivele.
+                    include exerciții și antrenamente specifice, ghidate pas cu
+                    pas, pentru a stimula recuperarea și dezvoltarea musculară
+                    și pentru a preveni recidivele.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
@@ -70,10 +72,11 @@ const description =
                     Plan de dezvoltare a obiceiurilor sănătoase
                 </H3>
                 <Span>
-                    Te ajut să devii mai disciplinat în activitățile zilnice,
-                    pentru a accelera procesul de recuperare și pentru a
-                    beneficia la maxim, pe termen lung, de corpul tău și de
-                    capacitatea acestuia.
+                    Te ajut să devii mai disciplinat în activitățile zilnice și
+                    să-ți formezi obiceiuri sustenabile. Fiecare pas pe care îl
+                    faci este important pentru a accelera procesul de recuperare
+                    și pentru a beneficia la maxim, pe termen lung, de corpul
+                    tău și de capacitatea acestuia.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
@@ -85,6 +88,14 @@ const description =
                     în funcție de produsele și felurile tale preferate de
                     mâncare, care nu te ajută doar să-ți atingi scopul cât mai
                     repede, ci și îți menține organismul sănătos.
+                </Span>
+            </div>
+            <div class="pt-8 border-t-2">
+                <H3 style="mb-2">Coaching 1 la 1</H3>
+                <Span>
+                    Sesiunile de 1 la 1 oferă mai multă calitate. Colaborarea
+                    este mai eficientă datorită atenției dedicate unei singure
+                    persoane.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
