--- a/src/pages/services-online.astro
+++ b/src/pages/services-online.astro
@@ -31,8 +31,9 @@ const description =
                         fitness și a nevoilor întâlnite, am lansat un program
                         prin care ofer protocoale de recuperare personalizate
                         sub forma de <strong><i>online coaching</i></strong>,
-                        ajutându-te să depășești afecțiunile spatelui și să îți
-                        recâștigi calitatea vieții.
+                        prin care te ajut să depășești momentele dureroase, să
+                        învingi afecțiunile coloanei vertebrale, să faci tot ce
+                        îți place și să-ți redobândești calitatea vieții.
                     </P>
                     <CollabOnlineCTA />
                 </div>
@@ -48,9 +49,9 @@ const description =
     </Section>
     <Section type="dark" wide>
         <H2 style="text-center mb-0 pb-0">
-            Program online personalizat, ce include protocoale de recuperare de
-            kinetoterapie și antrenamente cu greutăți, care se practică pe o
-            perioadă de <b><i>90 de zile</i></b>.
+            Program online personalizat care include protocoale de recuperare de
+            kinetoterapie și antrenamente cu greutăți, desfășurate pe o perioadă
+            de <b><i>90 de zile</i></b>.
         </H2>
     </Section>
     <Section>
@@ -64,8 +65,9 @@ const description =
                 <Span>
                     Fie că ești acasă sau în sala de fitness, vei primi un plan
                     de kinetoterapie adaptat nevoilor tale, care include
-                    exerciții și antrenamente eficiente, ghidate pas cu pas,
-                    pentru a stimula recuperarea și a preveni recidivele.
+                    exerciții și antrenamente specifice, ghidate pas cu pas,
+                    pentru a stimula recuperarea și dezvoltarea musculară și
+                    pentru a preveni recidivele.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
@@ -73,10 +75,11 @@ const description =
                     Plan de dezvoltare a obiceiurilor sănătoase
                 </H3>
                 <Span>
-                    Te ajut să devii mai disciplinat în activitățile zilnice,
-                    pentru a accelera procesul de recuperare și pentru a
-                    beneficia la maxim, pe termen lung, de corpul tău și de
-                    capacitatea acestuia.
+                    Te ajut să devii mai disciplinat în activitățile zilnice și
+                    să-ți formezi obiceiuri sustenabile. Fiecare pas pe care îl
+                    faci este important pentru a accelera procesul de recuperare
+                    și pentru a beneficia la maxim, pe termen lung, de corpul
+                    tău și de capacitatea acestuia.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
@@ -127,18 +130,18 @@ const description =
             <div class="pt-8 border-t-2">
                 <H3 style="mb-2">Aplicație mobilă</H3>
                 <Span>
-                    Pentru a avea acces rapid si usor la protocol, toate
-                    materialele aferente vor fi disponibile intr-o aplicatie, pe
-                    telefonul tau. Exercitiile explicate, planul de alimentatie,
-                    poze si alte informatii, toate vor fi intr-un singur loc.
+                    Pentru a avea acces rapid și ușor la protocol, toate
+                    materialele aferente vor fi disponibile într-o aplicație, pe
+                    telefonul tău. Exercițiile explicate, planul de alimentație,
+                    poze și alte informații, toate vor fi într-un singur loc.
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
                 <H3 style="mb-2">Clipuri video explicative</H3>
                 <Span>
-                    Am pregatit pentru tine o serie de clipuri video
-                    explicative, a fiecarui exercitiu, pentru executarea corecta
-                    a acestora si prevenirea unei accidentari.
+                    Am pregătit pentru tine o serie de clipuri video
+                    explicative, a fiecărui exercițiu, pentru executarea corectă
+                    a acestora și prevenirea unei accidentări.
                 </Span>
             </div>
         </div>
