Add link to tc page

--- a/src/components/footer/Links.astro
+++ b/src/components/footer/Links.astro
@@ -26,4 +26,9 @@
             Formular de colaborare la sală
         </a>
     </li>
+    <li class="hover:text-white">
+        <a href="/terms-and-conditions">
+            Termeni și condiții
+        </a>
+    </li>
 </ul>
