--- a/src/pages/services-online.astro
+++ b/src/pages/services-online.astro
@@ -10,6 +10,7 @@ import H2 from "../elements/H2.astro";
 import H3 from "../elements/H3.astro";
 import Span from "../elements/Span.astro";
 import CollabOnlineCTA from "../components/CollabOnlineCTA.astro";
+import CollabSteps from "../components/CollabSteps/index.astro";
 
 const title =
     "Scapă de durerea de spate, din confortul casei tale în 90 de zile";
@@ -55,6 +56,10 @@ const description =
         </H2>
     </Section>
     <Section>
+        <SectionHeader title="Cum primesc acces la program?" />
+        <CollabSteps />
+    </Section>
+    <Section type="light">
         <SectionHeader title="Ce include programul?" />
         <div class="grid grid-cols-1 md:grid-cols-2 gap-16">
             <!-- Planuri -->
