Add anchor for online collaboration steps.

--- a/src/pages/services-online.astro
+++ b/src/pages/services-online.astro
@@ -55,7 +55,7 @@ const description =
             de <b><i>90 de zile</i></b>.
         </H2>
     </Section>
-    <Section>
+    <Section id="online-collaboration-steps">
         <SectionHeader title="Cum primesc acces la program?" />
         <CollabSteps />
     </Section>
