Update the terms and conditions page.

--- a/src/pages/terms-and-conditions.astro
+++ b/src/pages/terms-and-conditions.astro
@@ -7,8 +7,29 @@ const description="Termeni și condiții de utilizare a site-ului"
 ---
 
 <Layout title={title} description={description}>
-<Section>
-<SectionHeader title="Termeni și condiții" titleStyle="mt-28" />
-<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vitae velit sed magna convallis dictum. Integer ac molestie tortor, nec dictum turpis. Ut dictum lobortis turpis, ut suscipit libero dignissim ac. Aliquam posuere cursus ligula, quis mollis lorem ultrices vitae. Quisque quis enim et felis bibendum pulvinar. Nam sed tincidunt ex. Aliquam nibh odio, tempor vitae imperdiet id, posuere tincidunt orci.</p>
-</Section>
+  <Section>
+    <SectionHeader title="Termeni și condiții" titleStyle="mt-28" />
+    <p>Bine ați venit pe site-ul <a class="hover:underline font-semibold" href="https://stefan-kinetosport.ro">https://stefan-kinetosport.ro</a> (denumit în continuare "site"). Utilizarea acestui site implică acceptarea termenilor și condițiilor de mai jos. Vă rugăm să citiți cu atenție aceste informații înainte de a utiliza site-ul.</p>
+    <h1 class="text-xl font-bold mt-8 mb-3 lg:mt-12 lg:mb-5">Definiții</h1>
+    <ul class="list-disc ml-5">
+      <li><strong>Utilizator:</strong> Orice persoană care accesează Site-ul.</li>
+      <li><strong>Servicii:</strong> Toate serviciile oferite prin intermediul Site-ului, inclusiv, dar fără a se limita la consultații de kinetoterapie și programe de sport.</li>
+    </ul>
+    <h1 class="text-xl font-bold mt-8 mb-3 lg:mt-12 lg:mb-5">Utilizarea Site-ului</h1>
+    <p>Utilizarea Site-ului se face pe propria răspundere. Ne rezervăm dreptul de a modifica sau actualiza termenele și condițiile fără notificare prealabilă. Este responsabilitatea dumneavoastră să verificați periodic această pagină pentru a fi la curent cu orice modificări.</p>
+    <h1 class="text-xl font-bold mt-8 mb-3 lg:mt-12 lg:mb-5">Confidențialitate</h1>
+    <p>Confidențialitatea dumneavoastră este importantă pentru noi. Momentan, nu colectăm datele personale, decât cele completate în formularele de colaborare.</p>
+    <h1 class="text-xl font-bold mt-8 mb-3 lg:mt-12 lg:mb-5">Programe și Servicii</h1>
+    <p>Ne străduim să oferim informații corecte și actualizate despre serviciile și programele noastre. Cu toate acestea, nu garantăm că informațiile sunt complete sau fără erori. Ne rezervăm dreptul de a modifica sau actualiza serviciile fără notificare prealabilă.</p>
+    <h1 class="text-xl font-bold mt-8 mb-3 lg:mt-12 lg:mb-5">Plata și Rezervări</h1>
+    <p>Toate plățile și rezervările pentru serviciile noastre se fac conform termenilor și condițiilor specificate în momentul achiziției. Orice anulare sau modificare a rezervărilor trebuie să respecte politicile noastre de anulare, detaliate pe Site.</p>
+    <h1 class="text-xl font-bold mt-8 mb-3 lg:mt-12 lg:mb-5">Drepturi de Proprietate Intelectuală</h1>
+    <p>Toate materialele prezentate pe Site, inclusiv, dar fără a se limita la texte, grafică, logo-uri, imagini și software, sunt proprietatea noastră sau a partenerilor noștri și sunt protejate de legislația privind drepturile de autor și alte legi privind proprietatea intelectuală.</p>
+    <h1 class="text-xl font-bold mt-8 mb-3 lg:mt-12 lg:mb-5">Limitarea Răspunderii</h1>
+    <p>În niciun caz nu vom fi răspunzători pentru orice daune directe, indirecte, accidentale, speciale sau punitive care rezultă din utilizarea sau incapacitatea de a utiliza Site-ul sau serviciile noastre.</p>
+    <h1 class="text-xl font-bold mt-8 mb-3 lg:mt-12 lg:mb-5">Link-uri către Alte Site-uri</h1>
+    <p>Site-ul poate conține link-uri către alte site-uri care nu sunt controlate de noi. Nu suntem responsabili pentru conținutul sau politicile acestor site-uri externe.</p>
+    <h1 class="text-xl font-bold mt-8 mb-3 lg:mt-12 lg:mb-5">Contact</h1>
+    <p>Pentru orice întrebări sau nelămuriri legate de acești termeni și condiții, vă rugăm să mă contactați la: <a class="hover:underline" href="mailto:stefanrusu.fitness@gmail.com">stefanrusu.fitness@gmail.com</a></p>
+  </Section>
 </Layout>
