Use scale-ups when hovering navigable elements.

--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -11,7 +11,7 @@ const { href, title, body } = Astro.props;
 ---
 
 <li
-  class="flex bg-primary text-white rounded-md overflow-hidden link-card h-full"
+  class="flex bg-primary text-white rounded-md overflow-hidden link-card h-full hover:scale-105 hover:shadow-lg"
 >
   <a class="flex flex-col width-full p-5" href={href}>
     <h2 class="text-lg mb-0.5 font-semibold">
