--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -12,13 +12,13 @@ import Logo from "./logo/LogoMedium.astro";
     </div>
     <nav class="flex flex-row gap-2 sm:gap-5 md:mx-10 md:mx-15">
       <a
-        class="text-sm text-black text-center leading-tight max-w-[112px] sm:text-base sm:max-w-none hover:text-primary"
+        class="text-sm text-black text-center leading-tight max-w-[112px] sm:text-base sm:max-w-none hover:text-primary hover:scale-105"
         href="/services-online"
       >
         <strong>Antrenamente online</strong>
       </a>
       <a
-        class="text-sm text-black text-center leading-tight max-w-[112px] sm:text-base sm:max-w-none hover:text-primary"
+        class="text-sm text-black text-center leading-tight max-w-[112px] sm:text-base sm:max-w-none hover:text-primary hover:scale-105"
         href="/services-gym"
       >
         <strong>Antrenamente la sală</strong>
