--- a/src/components/SocialMedia.astro
+++ b/src/components/SocialMedia.astro
@@ -1,7 +1,7 @@
 <div class="flex space-x-2">
   <a
     href="https://www.facebook.com/profile.php?id=61553924956164"
-    class="flex justify-center items-center decoration-none"
+    class="flex justify-center items-center decoration-none hover:scale-105"
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -18,7 +18,7 @@
   </a>
   <a
     href="https://www.instagram.com/stefan.kineto.sport/"
-    class="flex justify-center items-center"
+    class="flex justify-center items-center hover:scale-105"
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -35,7 +35,7 @@
   </a>
   <a
     href="https://www.tiktok.com/@stefan.kineto.sport"
-    class="flex justify-center items-center"
+    class="flex justify-center items-center hover:scale-105"
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
@@ -52,7 +52,7 @@
   </a>
   <a
     href="mailto:stefanrusu.fitness@gmail.com"
-    class="flex justify-center items-center"
+    class="flex justify-center items-center hover:scale-105"
   >
     <svg
       xmlns="http://www.w3.org/2000/svg"
