--- a/src/elements/CTA.astro
+++ b/src/elements/CTA.astro
@@ -8,7 +8,7 @@ interface Props {
 
 const { style, href } = Astro.props;
 let classes =
-    "bg-secondary hover:bg-secondary-light rounded-lg px-4 py-2 m-1 w-auto font-bold text-center";
+    "bg-secondary hover:bg-secondary-light hover:scale-105 rounded-lg px-4 py-2 m-1 w-auto font-bold text-center";
 
 if (style) {
     classes = joinClasses(classes, style);
