Improve homepage stylings.

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -18,9 +18,9 @@ import Icon from "astro-icon";
         </div>
         <div class="md:flex-[3]">
             <P style="mb-3 md:max-w-[370px] md:pr-5 md:mx-auto">
-                Sunt <strong>Ștefan Rusu</strong>, kinetoterapeut și antrenor
-                personal. Aplicând protocoale de recuperare prin kinetoterapie,
-                combinate cu antrenamente personalizate în sala de fitness, vom
+                Sunt <strong>Ștefan Rusu</strong>, <i>kinetoterapeut</i> specializat pe
+                recuperarea afecțiunilor ortopedice și <i>antrenor personal</i> specializat
+                în hipertrofie/dezvoltare musculară. Aplicând antrenamente personalizate combinate cu protocoale de recuperare prin kinetoterapie în sala de fitness, îți vei dezvolta musculatura și vei
                 putea preveni viitoare accidentări, afecțiuni și intervenții
                 chirurgicale.
             </P>
@@ -28,7 +28,7 @@ import Icon from "astro-icon";
                 href="/about"
                 class="flex flex-row items-center md:max-w-[370px] md:pr-5 md:mx-auto"
             >
-                <Span style="mr-1 hover:mr-2 text-gray-700 hover:text-gray-900">
+                <Span style="mr-1 hover:mr-3 text-gray-700 hover:text-gray-900">
                     Mai multe despre activitatea mea
                 </Span>
                 <Icon height="24" name="mdi:arrow-right" />
