--- a/src/components/CollabSteps/index.astro
+++ b/src/components/CollabSteps/index.astro
@@ -9,7 +9,7 @@ const STEPS = [
         hasForm: true,
     },
     {
-        title: "Setează o discuție pentru a agrea programul potrivit pentru tine",
+        title: "Programează un apel video online pentru a identifica programul potrivit pentru tine",
         description: "Această discuție are rolul de a clarifica informațiile introduse în formular, de a stabili obiective clare și de a valida o potențială colaborare. Pentru a avea o discuție cât mai eficientă, îți recomand să acorzi cât mai multă atenție formularului de colaborare online din pasul anterior.",
     },
     {
@@ -22,7 +22,7 @@ const STEPS = [
     },
     {
         title: "Primești acces la programul personalizat",
-        description: "Cu toate că imediat după ce reușești să accesezi aplicația vei avea acces și la un program de antrenament mai general, generarea unui plan de antrenament personalizat poate dura până la 10 zile. Acest plan poate fi editat și ulterior, în funcție de cum decurge colaborarea.",
+        description: "Vei avea acces la aplicație imediat, însă generarea unui plan de antrenament personalizat poate dura până la 5 zile. Acest plan va fi modificat constant, în funcție de cum decurge colaborarea, de progres și de nevoi.",
     }
 ];
 ---
