--- a/src/pages/terms-and-conditions.astro
+++ b/src/pages/terms-and-conditions.astro
@@ -2,7 +2,7 @@
 import Layout from "../layouts/Layout.astro";
 import Section from "../layouts/Section.astro";
 import SectionHeader from "../elements/SectionHeader.astro";
-const title="Stefan kineto-sport"
+const title="Ștefan kineto-sport"
 const description="Termeni și condiții de utilizare a site-ului"
 ---
 
