Add section for Personal Values.

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import P from "../elements/P.astro";
 import Hero from "../components/Hero.astro";
 import Features from "../components/Benefits.astro";
 import AboutMe from "../components/AboutMe.astro";
+import Values from "../components/Values.astro";
 import Services from "../components/Services.astro";
 import PreviousExperiences from "../components/PreviousExperiences.astro";
 import YoutubeShorts from "../components/YoutubeShorts.astro";
@@ -27,6 +28,7 @@ const description =
   </Section>
   <AboutMe />
   <Features />
+  <Values />
   <Services />
   <PreviousExperiences />
   <YoutubeShorts />
