Bulk updates with blog init and style improvements

--- a/src/components/AboutMe.astro
+++ b/src/components/AboutMe.astro
@@ -26,9 +26,9 @@ import Icon from "astro-icon";
             </P>
             <a
                 href="/about"
-                class="flex flex-row items-center md:max-w-[370px] md:pr-5 md:mx-auto"
+                class="flex flex-row items-center text-secondary-dark hover:text-secondary font-bold md:max-w-[370px] md:pr-5 md:mx-auto"
             >
-                <Span style="mr-1 hover:mr-3 text-gray-700 hover:text-gray-900">
+                <Span style="mr-1 hover:mr-3">
                     Mai multe despre activitatea mea
                 </Span>
                 <Icon height="24" name="mdi:arrow-right" />
