--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -3,6 +3,8 @@ import GoogleAnalytics from "../components/GoogleAnalytics.astro";
 import Header from "../components/Header.astro";
 import Footer from "../components/footer/Footer.astro";
 
+import "../assets/base.css";
+
 interface Props {
   title: string;
   description: string;
