--- a/src/pages/services-gym.astro
+++ b/src/pages/services-gym.astro
@@ -24,7 +24,7 @@ const description =
             <div class="flex flex-col md:flex-row gap-5 items-center">
                 <div class="flex flex-col gap-2 items-center">
                     <P style="md:flex-[2] text-center">
-                        Salut! Sunt <strong>Ștefan Rusu</strong>, kinetoterapeut
+                        Salut! Sunt <strong class="text-primary">Ștefan Rusu</strong>, kinetoterapeut
                         și antrenor personal. Te pot ajuta să îți îmbunătățești
                         sănătătea, forma fizică, să învingi orice afecțiune
                         ortopedică și să-ți dezvolți musculatura, atât în <a
@@ -47,7 +47,7 @@ const description =
     </Section>
     <Section type="dark" wide>
         <H2 style="text-center mb-0 pb-0">
-            Sesiunile de 1 la 1 oferă mai multă calitate. Colaborarea este mai
+            Sesiunile de <strong>1 la 1</strong> oferă mai multă <strong class="text-secondary tracking-wide">calitate</strong>. <br>Colaborarea este mai
             eficientă datorită atenției dedicate unei singure persoane.
         </H2>
     </Section>
@@ -91,6 +91,17 @@ const description =
                 </Span>
             </div>
             <div class="pt-8 border-t-2">
+                <H3 style="mb-2">Verificare Zilnică a Activității</H3>
+                <Span>
+                    Monitorizăm activitatea ta zilnică, de la numărul de pași
+                    sau timpul petrecut plimbându-te, la executarea exercițiilor
+                    și dezvoltarea obiceiurilor sănătoase. Astfel, vei avea o
+                    perspectivă detaliată asupra protocolului și progresului.
+                    Adaptăm planul tău în funcție de nevoile tale, pentru ca tu
+                    să te simți cât mai bine.
+                </Span>
+            </div>
+            <div class="pt-8 border-t-2">
                 <H3 style="mb-2">Coaching 1 la 1</H3>
                 <Span>
                     Sesiunile de 1 la 1 oferă mai multă calitate. Colaborarea
@@ -104,17 +115,6 @@ const description =
                     Sunt mereu aici pentru tine! Îți ofer sprijin și îndrumare
                     prin mesaje sau telefonic. Fie că ai nevoie de motivație sau
                     clarificări, sunt la un mesaj distanță.
-                </Span>
-            </div>
-            <div class="pt-8 border-t-2">
-                <H3 style="mb-2">Verificare Zilnică a Activității</H3>
-                <Span>
-                    Monitorizăm activitatea ta zilnică, de la numărul de pași
-                    sau timpul petrecut plimbându-te, la executarea exercițiilor
-                    și dezvoltarea obiceiurilor sănătoase. Astfel, vei avea o
-                    perspectivă detaliată asupra protocolului și progresului.
-                    Adaptăm planul tău în funcție de nevoile tale, pentru ca tu
-                    să te simți cât mai bine.
                 </Span>
             </div>
         </div>
