--- a/src/components/Benefits.astro
+++ b/src/components/Benefits.astro
@@ -1,7 +1,6 @@
 ---
 import Section from "../layouts/Section.astro";
 import SectionHeader from "../elements/SectionHeader.astro";
-import H3 from "../elements/H3.astro";
 import Small from "../elements/Small.astro";
 ---
 
@@ -9,7 +8,7 @@ import Small from "../elements/Small.astro";
     <SectionHeader title="Beneficiile tale" />
     <div class="flex flex-col md:flex-row md:justify-around gap-5">
         <div class="flex flex-1 flex-col gap-3">
-            <H3>Protocol de recuperare si antrenament personalizat</H3>
+            <h3>Protocol de recuperare si antrenament personalizat</h3>
             <Small>
                 Antrenamentul ideal nu există, dar putem identifica împreună
                 antrenamentul ideal pentru tine.
@@ -18,14 +17,14 @@ import Small from "../elements/Small.astro";
         <!-- Disabled -->
         <!-- <div class="border-b md:border-b-0 md:border-r text-white"></div>
         <div class="flex flex-1 flex-col gap-3">
-            <H3>Recuperare eficientă</H3>
+            <h3>Recuperare eficientă</h3>
             <Small>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </Small>
         </div> -->
         <div class="border-b md:border-b-0 md:border-r text-white"></div>
         <div class="flex flex-1 flex-col gap-3">
-            <H3>Rezultate de lungă durată</H3>
+            <h3>Rezultate de lungă durată</h3>
             <Small>
                 Te ajut nu doar să te recuperezi, ci și să previi recidivele și
                 să îți îmbunătățești calitatea vieții.
@@ -33,7 +32,7 @@ import Small from "../elements/Small.astro";
         </div>
         <div class="border-b md:border-b-0 md:border-r text-white"></div>
         <div class="flex flex-1 flex-col gap-3">
-            <H3>Risc scăzut de accidentare</H3>
+            <h3>Risc scăzut de accidentare</h3>
             <Small>
                 Te învăț cum să execuți CORECT exercițiile și să eliminăm
                 riscurile.
@@ -42,7 +41,7 @@ import Small from "../elements/Small.astro";
         <!-- Disabled -->
         <!-- <div class="border-b md:border-b-0 md:border-r text-white"></div>
         <div class="flex flex-1 flex-col gap-3">
-            <H3>Identificarea și remedierea afecțiunilor fizice</H3>
+            <h3>Identificarea și remedierea afecțiunilor fizice</h3>
             <Small>
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit.
             </Small>
