--- a/src/components/Values.astro
+++ b/src/components/Values.astro
@@ -1,7 +1,6 @@
 ---
 import SectionHeader from "../elements/SectionHeader.astro";
 import Section from "../layouts/Section.astro";
-import H3 from "../elements/H3.astro";
 import Small from "../elements/Small.astro";
 ---
 
@@ -9,7 +8,7 @@ import Small from "../elements/Small.astro";
   <SectionHeader title="Valorile pe care le promovez" />
   <div class="flex flex-col md:flex-row md:justify-around gap-5">
       <div class="flex flex-1 flex-col gap-3">
-        <H3>Execuția corectă, dozajul efortului și gestionarea încărcăturii</H3>
+        <h3>Execuția corectă, dozajul efortului și gestionarea încărcăturii</h3>
         <Small style="text-justify">
           Fiind atât antrenor, cât și kinetoterapeut, înțeleg mult mai bine cum funcționează structurile organismului și sunt atent la selecția exercițiilor și dozarea efortului, astfel încât să evităm orice risc.
           În felul acesta vei putea preveni accidentările foarte ușor, fără să complici lucrurile și orice afecțiune prezentă se va recupera rapid și eficient. Asta înseamnă că vei fi capabil să faci toate activitățile care îți plac, fără să te îngrijorezi.
@@ -17,7 +16,7 @@ import Small from "../elements/Small.astro";
       </div>
       <div class="border-b md:border-b-0 md:border-r text-white"></div>
       <div class="flex flex-1 flex-col gap-3">
-        <H3>Antrenamente eficiente și sustenabile</H3>
+        <h3>Antrenamente eficiente și sustenabile</h3>
         <Small style="text-justify">Dacă îți imaginezi că pentru a fi eficient la sală ai nevoie să îți consumi toată energia în ora de antrenament, hai să îți demonstrez că lucrurile stau diferit.
           Studiile ne arată că <strong>structura simplă a antrenamentului</strong> în combinație cu <strong>progresia lentă a efortului și încărcăturii</strong> atrag mai rapid rezultatele și contribuie la conservarea acestora.
           Adică poți să dezvolți și să susții mai ușor un stil de viață activ.
